syntax = "proto3";

option go_package = "github.com/kodekulture/raft-consensus/pb";

package pb;

message Log {
    uint64 term = 1;
    uint64 index = 2;
    bytes data = 3;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint32 leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated Log entries = 5;
  uint64 leaderCommitIndex = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
    int64 term = 1;
    int32 candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

service NodeService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}